2002-05-22  Michael Meeks  <michael@ximian.com>

	* src/nautilus-window.c (ui_idle_handler): hold a ref
	on the window while we do a load of possibly
	re-enterant stuff. #82050

2002-05-22  Michael Meeks  <michael@ximian.com>

	* libnautilus-private/nautilus-dnd.c (add_one_uri):
	add the full, non-mangled, clean, escaped URI.
	(is_path_that_gnome_uri_list_extract_filenames_can_parse),
	(add_one_compatible_uri): #ifdef out these abominations :-)
	Fixes bug #48423, breaks a certain level of
	compatibility with gnome-libs 1.4, inasmuch that
	complex URLs, containing strange characters will not
	be backwards compatible.

	* src/nautilus-window-manage-views.c (open_location):
	add a eel_uri_is_valid check, so the next #48423 is easier
	to track.

2002-05-21  Frank Worsley  <fworsley@shaw.ca>

	* libnautilus-private/nautilus-link-desktop-file.c:
	(nautilus_link_desktop_file_local_create): allow creation
	of desktop files without a nautilus icon
	
	* src/file-manager/fm-icon-view.c:
	(icon_view_handle_uri_list): make dnd of uri lists work right

2002-05-21  Michael Meeks  <michael@ximian.com>

	* src/nautilus-sidebar-tabs.c (get_property_bag):
	cache the property bag item, so we're not forever
	querying for it.
	(tab_item_destroy): re-write, belt and braces.
	(nautilus_sidebar_tabs_connect_view): update.
	(get_tab_image_name): don't release the property bag.
	(nautilus_sidebar_tabs_update_indicator): kill, unused.
	(nautilus_sidebar_tabs_add_view): associate the tab
	with it's parent.
	(tab_indicator_changed_callback): update just 1 tab.
	(nautilus_sidebar_tabs_update_all_indicators): remove,
	not what we wanted anyway.
	(nautilus_sidebar_tabs_update_tab_item): update sig.

2002-05-21  Michael Meeks  <michael@ximian.com>

	* src/file-manager/fm-list-view.c
	(list_activate_callback): move this code
	(event_after_callback): into here, it seems we get
	the event after the callback whether handled or not.
	(create_and_set_up_tree_view): unhook list_activate.
